NAVBAR and JUMBOTRON

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- Requi red meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
 
     <title> Bootstrap Cheat Sheet !</title>
 
+   
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
@@ -15,12 +16,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+  <style>
+        .navbar{
+            margin-bottom:0;
+        border-radius:0;
+        }
+      </style>
+
+
   </head>
    <body>
 
    <!-- NAVBAR-->
 
-    <nav class="navbar navbar-inverse">
+    
+     <nav class="navbar navbar-inverse">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -56,6 +66,17 @@
     </nav>
 
 
+  <!-- Jumbotron-->
+
+    <div class="Jumbotron text-center">
+
+    <div class="container">
+    <h1>Welcome To My Website</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+       <a href="#" class="btn btn-primary">Read More</a>
+      </div>
+    </div>
 
    <!-- Typography -->
 
@@ -194,7 +215,7 @@
 
     <hr>
 
-    <!-- Fprms-->
+    <!-- Forms-->
     <div class="container">
     <form>
       <div class="form-group">
